k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: movie-me-service
spec:
  selector:
    app: movie-me
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
  type: ClusterIP
  sessionAffinity: ClientIP
  externalTrafficPolicy: Local
