k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: movie-me-ingress
spec:
  rules:
    - host: movie-me.chatbot.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: movie-me-service
                port:
                  number: 5000
